# test-release-please

./: .gitignore  CHANGELOG.md  README.md  release-please-config.json
.github/: release-please.yml
.github/workflows/: release-please.yml
backend/: pyproject.toml
backend/mysite/: settings.py
frontend/: next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
